# Crann-Bethadh

./: .gitignore  CMakeLists.txt  CrannBethadh.jucer  README.md  quickBuild.sh
Source/: ColourMenu.cpp  ColourMenu.h  Convolver.cpp  Convolver.h  DataStruct.h  DelayLine.cpp  DelayLine.h  MenuStyleSheet.cpp  MenuStyleSheet.h  PluginEditor.cpp  PluginEditor.h  PluginParameters.h  PluginProcessor.cpp  PluginProcessor.h  RotaryKnobStyleSheet.cpp  RotaryKnobStyleSheet.h  Saturator.cpp  Saturator.h  SaturatorBoutique.h  Title.cpp  Title.h
test/: CMakeLists.txt  Test.cpp
ui/: index.html  manifest.json  package-lock.json  package.json  vite.config.js
ui/src/: App.svelte  app.css  store.js
ui/src/lib/: Nebula.svelte  NoiseBG.svelte  SaturationSelect.svelte  Structures.svelte
